--- a/Py_Analysis0.html
+++ b/Py_Analysis0.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Vinay Somawat - Web Development</title>
+    <title>车泽群 - 应用数据科学 - Python,Spark 数据分析</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Portfolio webpage of Vinay Somawat" />
+    <meta name="description" content="Portfolio webpage of Zequn Che" />
     <meta name="keywords" content="portfolio,website,personal website,github,projects,computer science and engineering" />
-    <meta name="author" content="Vinay Somawat" />
+    <meta name="author" content="Zequn Che" />
     <!--quora icon--> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -46,13 +46,13 @@
   </a>
   <style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
   <body id="particles-js">
-      <canvas id="canvas"></canvas>
+     <!-- <canvas id="canvas"></canvas> -->
     <div id="colorlib-page">
       <div class="container-wrap">
         <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a> 
         <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
           <div class="text-center">
-            <div class="author-img" style="background-image: url(images/IMG_-wl1xai.jpg);"></div>
+            <div class="author-img" style="background-image: url(images/IMG_-wl1xai.png);"></div>
             <h1 id="colorlib-logo"><a href="https://vinaysomawat.github.io">Vinay Somawat</a></h1>
               <span><strong><u>Tech Stacks</u></strong></span><br>
               <span class='badge badge-secondary'>Bootstrap</span>
