--- a/R_Analysis.html
+++ b/R_Analysis.html
@@ -3,11 +3,11 @@
    <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>Vinay Somawat - Competitive Programming</title>
+      <title>车泽群 - 应用数据科学 - R 数据分析</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="description" content="Portfolio webpage of Vinay Somawat" />
+      <meta name="description" content="Portfolio webpage of Zequn Che" />
       <meta name="keywords" content="portfolio,website,personal website,github,projects,computer science and engineering" />
-      <meta name="author" content="Vinay Somawat" />
+      <meta name="author" content="Zequn Che" />
       <!--Social Media icons--> 
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -31,16 +31,16 @@
        <script data-ad-client="ca-pub-4767382980457301" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
    </head>
    <body>
-       <canvas id="canvas"></canvas>
+       <!--<canvas id="canvas"></canvas>-->
       <div id="colorlib-page">
          <div class="container-wrap">
             <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a> 
             <!----Side bar--->
             <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
                <div class="text-center">
-                  <div class="author-img" style="background-image: url(images/IMG_-wl1xai.jpg);"></div>
-                  <h1 id="colorlib-logo"><a href="https://vinaysomawat.github.io">Vinay Somawat</a></h1>
-                  <p><strong>Competitive Programmer</strong></p>
+                  <div class="author-img" style="background-image: url(images/IMG_-wl1xai.png);"></div>
+                  <h1 id="colorlib-logo"><a href="https://vinaysomawat.github.io">车泽群</a></h1>
+                  <p><strong>Data Analyst</strong></p>
                </div>
             </aside>
             <!----- main page--------->
@@ -51,20 +51,27 @@
                      <div class="row">
                         <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
                            <!--	<span class="heading-meta">My Specialty</span> -->
-                           <h2>Programming Profiles</h2>
+                           <h2>项目经历</h2>
                            <hr>
                         </div>
                      </div>
                      <div class="row">
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+                        <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
                            <div class="progress-wrap">
                               <strong>
-                                 <a href="https://www.codechef.com/users/somawatvinay">
-                                    <p style="color:firebrick">Codechef</p>
+                                 <a href="https://docs.google.com/presentation/d/1dOkZIN7FIBYr3OnaazW5sybSQaD8w3ZPNfad_vT3Vr8/edit?usp=sharing">
+                                    <p style="color:firebrick">航空公司客户净推荐值数据分析，分析师（R）</p>
+                                 </a>
+                                 <a>•  从客户提供的关于乘客满意度的数据，进行问题（对乘客净推荐值影响较大的因素）分析，数据清理<br>
+                                    •  通过数据可视化，得出对模型影响最大的特征<br>
+                                    •  通过不同的模型，分析得出对乘客净推荐值影响较大的因素<br>
+                                    •  得到结论，对价格敏感的乘客更愿意推荐客户公司；客户公司的乘客一般会在与其他航空公司的对比中失败；第一印象的价格折扣会帮助减少批评者<br>
+                                    •  教授认为此项目是数据分析典型的实用且成功的项目，它从复杂的数据中清晰地找到了重点并得到了可靠的结论
                                  </a>
                               </strong>
                            </div>
                         </div>
+                        <!--
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
                            <div class="progress-wrap">
                               <strong>
@@ -109,16 +116,16 @@
                                  </a>
                               </strong>
                            </div>
-                        </div>
+                        </div>-->
                      </div>
                   </div>
                </section>
-               <section class="colorlib-skills" data-section="skills">
+               <!-- <section class="colorlib-skills" data-section="skills">
                   <div class="colorlib-narrow-content">
                      <div class="row">
                         <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
                            <!--	<span class="heading-meta">My Specialty</span> -->
-                           <h2>Technical Writing Profiles</h2>
+                           <!--<h2>Technical Writing Profiles</h2>
                            <hr>
                         </div>
                      </div>
@@ -143,13 +150,14 @@
                         </div>
                      </div>
                   </div>
-               </section>
+               </section> -->
+               <!--
                 <section class="colorlib-skills" data-section="skills">
                   <div class="colorlib-narrow-content">
                      <div class="row">
                         <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
                            <!--	<span class="heading-meta">My Specialty</span> -->
-                           <h2>Social Profiles</h2>
+                           <!--<h2>Social Profiles</h2>
                            <hr>
                         </div>
                      </div>
@@ -192,8 +200,9 @@
                         </div>
                      </div>
                   </div>
-               </section>
+               </section>-->
             </div>
+
             <!-- end:colorlib-main -->
          </div>
          <!-- end:container-wrap -->
